--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: python
     plan: free
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "python app/app.py"
+    startCommand: gunicorn app.app:app
     envVars:
       - key: OPENAI_API_KEY
         sync: false  # Set this in Render dashboard
