--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,8 @@ services:
     name: etx-modular-pipeline
     env: python
     plan: free
-    buildCommand: "pip install -r requirements.txt"
+    buildCommand: "pip install -r requirements-prod.txt"
     startCommand: gunicorn app.app:app
     envVars:
       - key: OPENAI_API_KEY
-        sync: false  # Set this in Render dashboard
+        sync: false
