--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: etx-modular-pipeline
     env: python
     plan: free
-    buildCommand: "pip install -r requirements-prod.txt"
+    buildCommand: "pip install -r requirements.txt"
     startCommand: gunicorn app.app:app
     envVars:
       - key: OPENAI_API_KEY
